--- a/csm-app/src/app/component/live-wallpaper-list-category/live-category-edit/live-category-edit.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-category-edit/live-category-edit.component.html
@@ -12,7 +12,7 @@
         <div class="list-input flex">
           <ng-container *ngFor="let link of model.links; let i = index">
             <div class="flex" style="margin: 0 4px 8px 4px;">
-              <input type="text" class="form-control" placeholder="links" />
+              <input type="text" class="form-control" [value]="link" placeholder="links" (input)="changeLink($event, link, i)" />
               <button class="btn btn-danger" (click)="deleteLinks(i)">
                 Xoá
               </button>
@@ -36,9 +36,9 @@
       <div class="url-input flex">
         <div class="label">Icon</div>
         <div class="list-input flex">
-          <ng-container *ngFor="let sound of model.icon; let i = index">
+          <ng-container *ngFor="let icon of model.icon; let i = index">
             <div class="flex" style="margin: 0 4px 8px 4px;">
-              <input type="text" class="form-control" placeholder="icon" />
+              <input type="text" class="form-control" [value]="icon" placeholder="icon" (input)="changeIcon($event, icon, i)" />
               <button class="btn btn-danger" (click)="deleteIcon(i)">
                 Xoá
               </button>
@@ -56,13 +56,39 @@
         </button>
       </div>
     </div>
+    
+    <div class="form-group">
+      <div class="url-input flex">
+        <div class="label">background</div>
+        <div class="list-input flex">
+          <ng-container *ngFor="let background of model.background; let i = index">
+            <div class="flex" style="margin: 0 4px 8px 4px;">
+              <input type="text" class="form-control" [value]="background" placeholder="icon" (input)="changeBackground($event, background, i)" />
+              <button class="btn btn-danger" (click)="deleteBackground(i)">
+                Xoá
+              </button>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+      <div class="btn-section">
+        <button
+          class="btn btn-success"
+          style="margin-right: 8px"
+          (click)="addBackground()"
+        >
+          Thêm
+        </button>
+      </div>
+    </div>
+
     <div class="form-group">
         <div class="url-input flex">
           <div class="label">Name</div>
           <div class="list-input flex">
             <ng-container>
               <div class="flex" style="margin: 0 4px 8px 4px;">
-                <input type="text" class="form-control" placeholder="name" />
+                <input [(ngModel)]="modelToSave.name" type="text" class="form-control" placeholder="name" />
               </div>
             </ng-container>
           </div>
