sửa live wallpaper

--- a/csm-app/src/app/component/live-wallpaper-list-category/live-category-edit/live-category-edit.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-category-edit/live-category-edit.component.html
@@ -6,6 +6,7 @@
     </button>
   </div>
   <div class="form-charging">    
+    <app-loading [loader]="isLoading"></app-loading>
     <div class="form-group">
       <div class="url-input flex">
         <div class="label">Links</div>
