--- a/csm-app/src/app/component/live-wallpaper-list/live-edit/live-edit.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-edit/live-edit.component.html
@@ -6,13 +6,14 @@
         </button>
     </div>
     <div class="form-charging">
+        <app-loading [loader]="isLoading"></app-loading>
         <div class="form-group">
             <div class="url-input flex">
                 <div class="label">Videos</div>
                 <div class="list-input flex">
-                    <ng-container *ngFor="let thumb of model.videos let i = index">
+                    <ng-container *ngFor="let video of model.videos let i = index">
                         <div class="flex" style="margin: 0 4px 8px 4px;">
-                            <input type="text" class="form-control" placeholder="videos" />
+                            <input type="text" class="form-control" [value]="video" placeholder="videos" (input)="changevideos($event, video, i)" />
                             <button class="btn btn-danger" (click)="deleteVideo(i)">
                                 Xoá
                             </button>
@@ -33,7 +34,7 @@
                 <div class="list-input flex">
                     <ng-container *ngFor="let thumb of model.thumbs; let i = index">
                         <div class="flex" style="margin: 0 4px 8px 4px;">
-                            <input type="text" class="form-control" placeholder="thumbs" />
+                            <input type="text" class="form-control" [value]="thumb" placeholder="thumbs" (input)="changethumbs($event, thumb, i)" />
                             <button class="btn btn-danger" (click)="deleteThumb(i)">
                                 Xoá
                             </button>
@@ -55,7 +56,7 @@
                 <div class="list-input flex">
                     <ng-container>
                         <div class="flex" style="margin: 0 4px 8px 4px;">
-                            <input type="checkbox" placeholder="isPremium" />
+                            <input type="checkbox" [(ngModel)]="modelToSave.isPremium" placeholder="isPremium" />
                         </div>
                     </ng-container>
                 </div>
@@ -68,7 +69,7 @@
                 <div class="list-input flex">
                     <ng-container>
                         <div class="flex" style="margin: 0 4px 8px 4px;">
-                            <input type="checkbox"  placeholder="isLiveWallpaper" />
+                            <input type="checkbox" [(ngModel)]="modelToSave.isLiveWallpaper"  placeholder="isLiveWallpaper" />
                         </div>
                     </ng-container>
                 </div>
@@ -80,7 +81,7 @@
                 <div class="list-input flex">
                     <ng-container>
                         <div class="flex" style="margin: 0 4px 8px 4px;">
-                            <input type="number" class="form-control" placeholder="priority" />
+                            <input type="number" [(ngModel)]="modelToSave.priority" class="form-control" placeholder="priority" />
                         </div>
                     </ng-container>
                 </div>
