--- a/csm-app/src/app/component/upload/upload-live/upload-live.component.html
+++ b/csm-app/src/app/component/upload/upload-live/upload-live.component.html
@@ -20,3 +20,5 @@
   <label class="form-label">IsPremium</label>
   <input [(ngModel)]="data.isPremium" class="form-check-input" style="margin: 3px 8px;" type="checkbox" id="isPremium">
 </div> 
+
+<button class="btn btn-primary" (click)="saveData()">Lưu</button>
