--- a/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
+++ b/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
@@ -13,19 +13,20 @@
         <div class="list-input flex">
           <ng-container *ngFor="let thumb of model.thumbs; let i = index">
             <div class="flex" style="margin: 0 4px 8px 4px;">
-              <input type="text" class="form-control" [value]="thumb" placeholder="thumbs" (input)="changethumbs($event, thumb, i)" />
-              <button class="btn btn-danger" (click)="deleteThumb(i)">
+              <img src="{{thumb}}" width="208" height="463">
+              <!-- <input type="text" class="form-control" [value]="thumb" placeholder="thumbs" (input)="changethumbs($event, thumb, i)" /> -->
+              <!-- <button class="btn btn-danger" (click)="deleteThumb(i)">
                 Xoá
-              </button>
+              </button> -->
             </div>
           </ng-container>
         </div>
       </div>
-      <div class="btn-section">
+      <!-- <div class="btn-section">
         <button class="btn btn-success" style="margin-right: 8px" (click)="addThumb()">
           Thêm
         </button>
-      </div>
+      </div> -->
     </div>
 
     <div class="form-charging">
@@ -35,19 +36,20 @@
           <div class="list-input flex">
             <ng-container *ngFor="let thumb of model.thumbvideos; let i = index">
               <div class="flex" style="margin: 0 4px 8px 4px;">
-                <input type="text" class="form-control" [value]="thumb" placeholder="thumb videos" (input)="changethumbvideos($event, thumb, i)"  />
-                <button class="btn btn-danger" (click)="deleteThumbvideos(i)">
+                <img src="{{thumb}}" width="208" height="463">
+                <!-- <input type="text" class="form-control" [value]="thumb" placeholder="thumb videos" (input)="changethumbvideos($event, thumb, i)"  /> -->
+                <!-- <button class="btn btn-danger" (click)="deleteThumbvideos(i)">
                   Xoá
-                </button>
+                </button> -->
               </div>
             </ng-container>
           </div>
         </div>
-        <div class="btn-section">
+        <!-- <div class="btn-section">
           <button class="btn btn-success" style="margin-right: 8px" (click)="addThumbvideos()">
             Thêm
           </button>
-        </div>
+        </div> -->
       </div>
 
       <div class="form-group">
@@ -56,28 +58,32 @@
           <div class="list-input flex">
             <ng-container *ngFor="let video of model.videos; let i = index">
               <div class="flex" style="margin: 0 4px 8px 4px;">
-                <input type="text" class="form-control" [value]="video" placeholder="videos" (input)="changevideos($event, video, i)"  />
-                <button class="btn btn-danger" (click)="deleteVideo(i)">
+                <video width="320" height="240" autoplay>
+                  <source src="{{video}}" type="video/mp4">
+                </video>
+                <!-- <input type="text" class="form-control" [value]="video" placeholder="videos" (input)="changevideos($event, video, i)"  /> -->
+                <!-- <button class="btn btn-danger" (click)="deleteVideo(i)">
                   Xoá
-                </button>
+                </button> -->
               </div>
             </ng-container>
           </div>
         </div>
-        <div class="btn-section">
+        <!-- <div class="btn-section">
           <button class="btn btn-success" style="margin-right: 8px" (click)="addVideo()">
             Thêm
           </button>
-        </div>
+        </div> -->
       </div>
 
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <div class="url-input flex">
           <div class="label">Sounds</div>
           <div class="list-input flex">
             <ng-container *ngFor="let sound of model.sounds; let i = index">
               <div class="flex" style="margin: 0 4px 8px 4px;">
+                <img src="{{sound}}">
                 <input type="text" class="form-control" [value]="sound" placeholder="sounds" (input)="changesounds($event, sound, i)"  />
                 <button class="btn btn-danger" (click)="deleteSound(i)">
                   Xoá
@@ -85,13 +91,13 @@
               </div>
             </ng-container>
           </div>
-        </div>
-        <div class="btn-section">
+        </div> -->
+        <!-- <div class="btn-section">
           <button class="btn btn-success" style="margin-right: 8px" (click)="addSound()">
             Thêm
           </button>
         </div>
-      </div>
+      </div> -->
 
       <div class="form-group">
         <div class="url-input flex">
@@ -119,6 +125,6 @@
         </div>
       </div>
 
-      <button class="btn btn-primary" (click)="saveData()">Lưu</button>
+      <!-- <button class="btn btn-primary" (click)="saveData()">Lưu</button> -->
     </div>
   </div>
