--- a/csm-app/src/app/component/live-wallpaper-list-category/live-category-edit/live-category-edit.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-category-edit/live-category-edit.component.html
@@ -14,14 +14,14 @@
           <ng-container *ngFor="let link of model.links; let i = index">
             <div class="flex" style="margin: 0 4px 8px 4px;">
               <input type="text" class="form-control" [value]="link" placeholder="links" (input)="changeLink($event, link, i)" />
-              <button class="btn btn-danger" (click)="deleteLinks(i)">
+              <!-- <button class="btn btn-danger" (click)="deleteLinks(i)">
                 Xoá
-              </button>
+              </button> -->
             </div>
           </ng-container>
         </div>
       </div>
-      <div class="btn-section">
+      <!-- <div class="btn-section">
         <button
           class="btn btn-success"
           style="margin-right: 8px"
@@ -29,7 +29,7 @@
         >
           Thêm
         </button>
-      </div>
+      </div> -->
     </div>
 
     
@@ -39,15 +39,16 @@
         <div class="list-input flex">
           <ng-container *ngFor="let icon of model.icon; let i = index">
             <div class="flex" style="margin: 0 4px 8px 4px;">
-              <input type="text" class="form-control" [value]="icon" placeholder="icon" (input)="changeIcon($event, icon, i)" />
+              <img src="{{icon}}">
+              <!-- <input type="text" class="form-control" [value]="icon" placeholder="icon" (input)="changeIcon($event, icon, i)" />
               <button class="btn btn-danger" (click)="deleteIcon(i)">
                 Xoá
-              </button>
+              </button> -->
             </div>
           </ng-container>
         </div>
       </div>
-      <div class="btn-section">
+      <!-- <div class="btn-section">
         <button
           class="btn btn-success"
           style="margin-right: 8px"
@@ -55,7 +56,7 @@
         >
           Thêm
         </button>
-      </div>
+      </div> -->
     </div>
     
     <div class="form-group">
@@ -64,15 +65,16 @@
         <div class="list-input flex">
           <ng-container *ngFor="let background of model.background; let i = index">
             <div class="flex" style="margin: 0 4px 8px 4px;">
-              <input type="text" class="form-control" [value]="background" placeholder="icon" (input)="changeBackground($event, background, i)" />
+              <img src="{{background}}" width="208" height="463">
+              <!-- <input type="text" class="form-control" [value]="background" placeholder="icon" (input)="changeBackground($event, background, i)" />
               <button class="btn btn-danger" (click)="deleteBackground(i)">
                 Xoá
-              </button>
+              </button> -->
             </div>
           </ng-container>
         </div>
       </div>
-      <div class="btn-section">
+      <!-- <div class="btn-section">
         <button
           class="btn btn-success"
           style="margin-right: 8px"
@@ -80,7 +82,7 @@
         >
           Thêm
         </button>
-      </div>
+      </div> -->
     </div>
 
     <div class="form-group">
@@ -95,6 +97,6 @@
           </div>
         </div>
       </div>
-    <button class="btn btn-primary">Lưu</button>
+    <!-- <button class="btn btn-primary">Lưu</button> -->
   </div>
 </div>
