--- a/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
@@ -4,7 +4,7 @@
   <h2 class="title-grid">Danh sách</h2>
   <div class="add-chargin">
     <!-- <button (click)="router.navigate(['live-category-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button> -->
-    <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button>
+    <!-- <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button> -->
   </div>
   
   <ag-grid-angular
