--- a/csm-app/src/app/component/live-wallpaper-list/live-edit/live-edit.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-edit/live-edit.component.html
@@ -13,19 +13,22 @@
                 <div class="list-input flex">
                     <ng-container *ngFor="let video of model.videos let i = index">
                         <div class="flex" style="margin: 0 4px 8px 4px;">
-                            <input type="text" class="form-control" [value]="video" placeholder="videos" (input)="changevideos($event, video, i)" />
+                            <video width="320" height="240" autoplay>
+                                <source src="{{video}}" type="video/mp4">
+                              </video>
+                            <!-- <input type="text" class="form-control" [value]="video" placeholder="videos" (input)="changevideos($event, video, i)" />
                             <button class="btn btn-danger" (click)="deleteVideo(i)">
                                 Xoá
-                            </button>
+                            </button> -->
                         </div>
                     </ng-container>
                 </div>
             </div>
-            <div class="btn-section">
+            <!-- <div class="btn-section">
                 <button class="btn btn-success" style="margin-right: 8px" (click)="addVideo()">
                     Thêm
                 </button>
-            </div>
+            </div> -->
         </div>
 
         <div class="form-group">
@@ -34,19 +37,20 @@
                 <div class="list-input flex">
                     <ng-container *ngFor="let thumb of model.thumbs; let i = index">
                         <div class="flex" style="margin: 0 4px 8px 4px;">
-                            <input type="text" class="form-control" [value]="thumb" placeholder="thumbs" (input)="changethumbs($event, thumb, i)" />
+                            <img src="{{thumb}}" width="208" height="463">
+                            <!-- <input type="text" class="form-control" [value]="thumb" placeholder="thumbs" (input)="changethumbs($event, thumb, i)" />
                             <button class="btn btn-danger" (click)="deleteThumb(i)">
                                 Xoá
-                            </button>
+                            </button> -->
                         </div>
                     </ng-container>
                 </div>
             </div>
-            <div class="btn-section">
+            <!-- <div class="btn-section">
                 <button class="btn btn-success" style="margin-right: 8px" (click)="addThumb()">
                     Thêm
                 </button>
-            </div>
+            </div> -->
         </div>
 
 
@@ -88,6 +92,6 @@
             </div>
         </div>
 
-        <button class="btn btn-primary">Lưu</button>
+        <!-- <button class="btn btn-primary">Lưu</button> -->
     </div>
 </div>
