--- a/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
@@ -4,7 +4,7 @@
   <h2 class="title-grid">Danh sách</h2>
   <div class="add-chargin">
     <button class="btn btn-secondary" (click)="back()" style="margin-bottom: 8px">Quay lại</button>
-    <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button>
+    <!-- <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button> -->
   </div>
   
   <ag-grid-angular
