--- a/csm-app/src/app/component/upload/upload-charging/upload-charging.component.html
+++ b/csm-app/src/app/component/upload/upload-charging/upload-charging.component.html
@@ -7,8 +7,8 @@
 </div>
 
 <div class="mb-3">
-  <label for="formPriority" class="form-label">Priority</label>
-  <input [(ngModel)]="data.priority" class="form-control" type="number" accept="audio/mp3" id="priority">
+  <label class="form-label">Priority</label>
+  <input [(ngModel)]="data.priority" class="form-control" type="number" id="priority">
 </div>
 <div class="mb-3">
   <label class="form-label">IsPremium</label>
