--- a/csm-app/src/app/component/charging-list/charging-list.component.html
+++ b/csm-app/src/app/component/charging-list/charging-list.component.html
@@ -15,6 +15,8 @@
     [tooltipShowDelay]="tooltipShowDelay"
     [defaultColDef]="defaultColumnDef"
     [enableCellTextSelection]="true"
+    [suppressRowClickSelection]="true"
+    (cellDoubleClicked)='onCellDoubleClicked($event)'
   >
   </ag-grid-angular>
 </div>
@@ -24,5 +26,23 @@
     <p>Bạn chắc chắn muốn xoá?</p>
     <button type="button" class="btn btn-secondary" (click)="confirm()" style="margin-right: 8px">Có</button>
     <button type="button" class="btn btn-primary" (click)="decline()" >Không</button>
+  </div>
+</ng-template>
+
+<ng-template #templateUpdate>
+  <div class="modal-body">
+    <div class="form-group">
+      <div class="url-input flex">
+          <div class="label" style="margin-top: 6px;margin-right: 20px;">Priority</div>
+          <div class="list-input flex">
+              <ng-container>
+                  <div class="flex" style="margin: 0 4px 8px 4px;">
+                      <input type="number" [(ngModel)]="priority" class="form-control" placeholder="priority" />
+                  </div>
+              </ng-container>
+          </div>
+      </div>
+  </div>
+    <button type="button" class="btn btn-secondary" (click)="confirmUpdate()" style="margin-right: 8px">Cập nhật</button>
   </div>
 </ng-template>
