--- a/csm-app/src/app/component/charging-list/charging-list.component.html
+++ b/csm-app/src/app/component/charging-list/charging-list.component.html
@@ -17,6 +17,8 @@
     [enableCellTextSelection]="true"
     [suppressRowClickSelection]="true"
     (cellDoubleClicked)='onCellDoubleClicked($event)'
+    [pagination]="true"
+    [paginationPageSize]="20"
   >
   </ag-grid-angular>
 </div>
