--- a/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.scss
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.scss
@@ -1,3 +1,13 @@
-.live-category-container{
-    margin: 32px;
+.live-category-container {
+  margin: 32px;
+}
+
+:host{
+  ::ng-deep{
+    .ag-row .ag-cell.align-center {
+      display: flex;
+      justify-content: center; /* align horizontal */
+      align-items: center;
+    }
   }
+}
