--- a/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
@@ -18,6 +18,8 @@
     [defaultColDef]="defaultColumnDef"
     [suppressRowClickSelection]="true"
     (cellDoubleClicked)='onCellDoubleClicked($event)'
+    [pagination]="true"
+    [paginationPageSize]="20"
   >
   </ag-grid-angular>
 </div>
