--- a/csm-app/src/app/component/charging-list/charging-list.component.scss
+++ b/csm-app/src/app/component/charging-list/charging-list.component.scss
@@ -1,3 +1,13 @@
 .list-charging-container{
   margin: 32px;
 }
+
+:host{
+  ::ng-deep{
+    .ag-row .ag-cell.align-center {
+      display: flex;
+      justify-content: center; /* align horizontal */
+      align-items: center;
+    }
+  }
+}
