--- a/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header> 
+<app-header></app-header>
 <div class="live-wallpaper-container">
 
   <h2 class="title-grid">Danh sách</h2>
@@ -6,21 +6,11 @@
     <button class="btn btn-secondary" (click)="back()" style="margin-bottom: 8px">Quay lại</button>
     <!-- <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button> -->
   </div>
-  
-  <ag-grid-angular
-    style="width: 100%; height: calc(100vh - 216px)"
-    class="ag-theme-alpine"
-    [rowData]="data"
-    [columnDefs]="columnDefs"
-    (gridReady)="onGridReady($event)"
-    [getRowHeight]="getRowHeight"
-    [tooltipShowDelay]="tooltipShowDelay"
-    [defaultColDef]="defaultColumnDef"
-    [suppressRowClickSelection]="true"
-    (cellDoubleClicked)='onCellDoubleClicked($event)'
-    [pagination]="true"
-    [paginationPageSize]="20"
-  >
+
+  <ag-grid-angular style="width: 100%; height: calc(100vh - 216px)" class="ag-theme-alpine" [rowData]="data"
+    [columnDefs]="columnDefs" (gridReady)="onGridReady($event)" [getRowHeight]="getRowHeight"
+    [tooltipShowDelay]="tooltipShowDelay" [defaultColDef]="defaultColumnDef" [suppressRowClickSelection]="true"
+    (cellDoubleClicked)='onCellDoubleClicked($event)' [pagination]="true" [paginationPageSize]="20">
   </ag-grid-angular>
 </div>
 
@@ -28,7 +18,7 @@
   <div class="modal-body text-center">
     <p>Bạn chắc chắn muốn xoá?</p>
     <button type="button" class="btn btn-secondary" (click)="confirm()" style="margin-right: 8px">Có</button>
-    <button type="button" class="btn btn-primary" (click)="decline()" >Không</button>
+    <button type="button" class="btn btn-primary" (click)="decline()">Không</button>
   </div>
 </ng-template>
 
@@ -36,16 +26,29 @@
   <div class="modal-body">
     <div class="form-group">
       <div class="url-input flex">
-          <div class="label" style="margin-top: 6px;margin-right: 20px;">Priority</div>
-          <div class="list-input flex">
-              <ng-container>
-                  <div class="flex" style="margin: 0 4px 8px 4px;">
-                      <input type="number" [(ngModel)]="priority" class="form-control" placeholder="priority" />
-                  </div>
-              </ng-container>
-          </div>
+        <div class="label" style="margin-top: 6px;margin-right: 43px;">Priority</div>
+        <div class="list-input flex">
+          <ng-container>
+            <div class="flex" style="margin: 0 4px 8px 4px;">
+              <input type="number" [(ngModel)]="priority" class="form-control" placeholder="priority" />
+            </div>
+          </ng-container>
+        </div>
       </div>
-  </div>
-    <button type="button" class="btn btn-secondary" (click)="confirmUpdate()" style="margin-right: 8px">Cập nhật</button>
+    </div>
+    <div class="form-group">
+      <div class="url-input flex">
+        <div class="label" style="margin-top: -7px;margin-right: 20px;">IsPremium</div>
+        <div class="list-input flex">
+          <ng-container>
+            <div class="flex" style="margin: 0 4px 8px 4px;">
+              <input type="checkbox" [(ngModel)]="isPremium" placeholder="isLiveWallpaper" />
+            </div>
+          </ng-container>
+        </div>
+      </div>
+    </div>
+    <button type="button" class="btn btn-secondary" (click)="confirmUpdate()" style="margin-right: 8px">Cập
+      nhật</button>
   </div>
 </ng-template>
