--- a/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.scss
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.scss
@@ -2,12 +2,16 @@
   margin: 32px;
 }
 
-:host{
-  ::ng-deep{
-    .ag-row .ag-cell.align-center {
+
+:host {
+  ::ng-deep {
+    .ag-row .ag-cell.h-align-center {
       display: flex;
-      justify-content: center; /* align horizontal */
       align-items: center;
+    }
+    .ag-row .ag-cell.v-align-center{
+      display: flex;
+      justify-content: center; 
     }
   }
 }
