--- a/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.scss
+++ b/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.scss
@@ -4,10 +4,13 @@
 
 :host {
   ::ng-deep {
-    .ag-row .ag-cell.align-center {
+    .ag-row .ag-cell.h-align-center {
       display: flex;
-      justify-content: center; /* align horizontal */
       align-items: center;
+    }
+    .ag-row .ag-cell.v-align-center{
+      display: flex;
+      justify-content: center; 
     }
   }
 }
