--- a/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
+++ b/csm-app/src/app/component/charging-list/charging-edit/charging-edit.component.html
@@ -74,6 +74,7 @@
               <div class="flex" style="margin: 0 4px 8px 4px;">
                 <video class="m-3" height="260" autoplay loop>
                   <source src="{{video}}" type="video/mp4">
+                  <source src="assets/video/video_default.mp4" type="video/mp4">
                 </video>
                 <!-- <input type="text" class="form-control" [value]="video" placeholder="videos" (input)="changevideos($event, video, i)"  /> -->
                 <!-- <button class="btn btn-danger" (click)="deleteVideo(i)">
