--- a/csm-app/src/app/component/live-wallpaper-list/live-edit/live-edit.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-edit/live-edit.component.html
@@ -15,6 +15,7 @@
                         <div class="flex" style="margin: 0 4px 8px 4px;">
                             <video width="320" height="240" autoplay>
                                 <source src="{{video}}" type="video/mp4">
+                                <source src="assets/video/video_default.mp4" type="video/mp4">
                               </video>
                             <!-- <input type="text" class="form-control" [value]="video" placeholder="videos" (input)="changevideos($event, video, i)" />
                             <button class="btn btn-danger" (click)="deleteVideo(i)">
