--- a/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
@@ -1,32 +1,36 @@
-<app-header></app-header> 
+<app-header></app-header>
 <div class="live-category-container">
 
-  <h2 class="title-grid">Danh sách</h2>
+  <h2 class="title-grid">Live Wallpaper Category</h2>
   <div class="add-chargin">
     <!-- <button (click)="router.navigate(['live-category-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button> -->
     <!-- <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button> -->
   </div>
-  
-  <ag-grid-angular
-    style="width: 100%; height: calc(100vh - 190px)"
-    class="ag-theme-alpine"
-    [rowData]="data"
-    [columnDefs]="columnDefs"
-    (gridReady)="onGridReady($event)"
-    [getRowHeight]="getRowHeight"
-    [tooltipShowDelay]="tooltipShowDelay"
-    [defaultColDef]="defaultColumnDef"
-    [enableCellTextSelection]="true"
-    [pagination]="true"
-    [paginationPageSize]="20"
-  >
-  </ag-grid-angular>
-</div>
 
+  <div class="content">
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+      <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let item of data">
+        <mat-card class="mat-elevation-z4">
+          <mat-card-header>
+            <mat-card-title>{{item.name}}</mat-card-title>
+          </mat-card-header>
+          <img mat-card-image onerror="this.onerror=null; this.src='assets/image/default.png'" src="{{item.icon[0]}}">
+          <mat-card-content>
+          </mat-card-content>
+          <mat-card-actions style="text-align: center;">
+            <button (click)="viewLive(item)" mat-button>Xem</button>
+            <button (click)="deleteLive(item)" mat-button>Xóa</button>
+            <button (click)="detailLive(item)" mat-button>Live Wallpaper </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
 <ng-template #template>
   <div class="modal-body text-center">
     <p>Bạn chắc chắn muốn xoá?</p>
     <button type="button" class="btn btn-secondary" (click)="confirm()" style="margin-right: 8px">Có</button>
-    <button type="button" class="btn btn-primary" (click)="decline()" >Không</button>
+    <button type="button" class="btn btn-primary" (click)="decline()">Không</button>
   </div>
 </ng-template>
