--- a/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
@@ -1,17 +1,54 @@
 <app-header></app-header>
 <div class="live-wallpaper-container">
 
-  <h2 class="title-grid">Danh sách</h2>
+  <h2 class="title-grid">Live Wallpaper</h2>
   <div class="add-chargin">
     <button class="btn btn-secondary" (click)="back()" style="margin-bottom: 8px">Quay lại</button>
     <!-- <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button> -->
   </div>
 
-  <ag-grid-angular style="width: 100%; height: calc(100vh - 216px)" class="ag-theme-alpine" [rowData]="data"
-    [columnDefs]="columnDefs" (gridReady)="onGridReady($event)" [getRowHeight]="getRowHeight"
-    [tooltipShowDelay]="tooltipShowDelay" [defaultColDef]="defaultColumnDef" [suppressRowClickSelection]="true"
-    (cellDoubleClicked)='onCellDoubleClicked($event)' [pagination]="true" [paginationPageSize]="20">
-  </ag-grid-angular>
+  <div class="content">
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+      <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let item of data">
+        <mat-card class="mat-elevation-z4">
+          <mat-card-header>
+          </mat-card-header>
+          <img mat-card-image onerror="this.onerror=null; this.src='assets/image/default.png'" src="{{item.thumbs[0]}}">
+          <mat-card-content>
+            <div class="form-group">
+              <div class="url-input flex">
+                <div class="label" style="margin-top: 6px;margin-right: 43px;">Priority</div>
+                <div class="list-input flex">
+                  <ng-container>
+                    <div class="flex" style="margin: 0 4px 8px 4px;">
+                      <input type="number" [(ngModel)]="item.priority" class="form-control" placeholder="priority" />
+                    </div>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="url-input flex">
+                <div class="label" style="margin-top: -7px;margin-right: 20px;">IsPremium</div>
+                <div class="list-input flex">
+                  <ng-container>
+                    <div class="flex" style="margin: 0 4px 8px 4px;">
+                      <input type="checkbox" [(ngModel)]="item.isPremium" placeholder="isLiveWallpaper" />
+                    </div>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+          <mat-card-actions style="text-align: center;">
+            <button (click)="viewLive(item)" mat-button>Xem</button>
+            <button (click)="deleteLive(item)" mat-button>Xóa</button>
+            <button (click)="updateLive(item)" mat-button>Cập nhật</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </div>
 </div>
 
 <ng-template #template>
@@ -47,6 +84,15 @@
           </ng-container>
         </div>
       </div>
+    </div>
+    <div class="mb-3">
+      <label for="formFile" class="form-label">Videos</label>
+      <input class="form-control" (change)="onFileChange($event, 3)" type="file" accept="video/mp4" id="videos">
+    </div>
+    
+    <div class="mb-3">
+      <label for="formFile" class="form-label">Thumbs</label>
+      <input class="form-control" (change)="onFileChange($event, 1)" type="file" accept="image/*" id="thumbs">
     </div>
     <button type="button" class="btn btn-secondary" (click)="confirmUpdate()" style="margin-right: 8px">Cập
       nhật</button>
