--- a/csm-app/src/app/component/charging-list-category/charging-list-category.component.html
+++ b/csm-app/src/app/component/charging-list-category/charging-list-category.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header> 
 <div class="charging-category-container">
   
+  <app-loading [loader]="isLoading"></app-loading>
   <div class="add-chargin">
     <!-- <button (click)="router.navigate(['charging-category-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button> -->
     <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button>
