--- a/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list-category/live-wallpaper-list-category.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="live-category-container">
+  <app-loading [loader]="isLoading"></app-loading>
 
   <h2 class="title-grid">Live Wallpaper Category</h2>
   <div class="add-chargin">
