--- a/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
@@ -5,7 +5,7 @@
   <h2 class="title-grid">Live Wallpaper</h2>
   <div class="add-chargin">
     <button class="btn btn-secondary" (click)="back()" style="margin-bottom: 8px">Quay lại</button>
-    <!-- <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button> -->
+    <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu cho mobile</button>
   </div>
 
   <div class="content">
