--- a/csm-app/src/app/share/component/header/header.component.html
+++ b/csm-app/src/app/share/component/header/header.component.html
@@ -37,6 +37,9 @@
       <li class="nav-item">
         <a class="nav-link waves-light" routerLinkActive="active" routerLink="/user" mdbWavesEffect>User</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/version" mdbWavesEffect>Version</a>
+      </li>
     </ul>
 
   </links>
