--- a/csm-app/src/app/component/version/version.component.html
+++ b/csm-app/src/app/component/version/version.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
-<div class="live-wallpaper-container">
+<div class="live-category-container">
+    <h2 class="title-grid">Version</h2>
     <div class="add-chargin">
         <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu cho mobile</button>
     </div>
