--- a/csm-app/src/app/component/version/version-list.component.html
+++ b/csm-app/src/app/component/version/version-list.component.html
@@ -18,6 +18,7 @@
     [enableCellTextSelection]="true"
     [pagination]="true"
     [paginationPageSize]="20"
+    [enableBrowserTooltips]="true"
   >
   </ag-grid-angular>
 </div>
