--- a/csm-app/src/app/component/charging-list-category/charging-list-category.component.html
+++ b/csm-app/src/app/component/charging-list-category/charging-list-category.component.html
@@ -2,6 +2,7 @@
 <div class="charging-category-container">
   
   <app-loading [loader]="isLoading"></app-loading>
+  <h2 class="title-grid">Danh sách Charging Category</h2>
   <div class="add-chargin">
     <!-- <button (click)="router.navigate(['charging-category-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button> -->
     <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu cho mobile</button>
