--- a/csm-app/src/app/component/version/version-list.component.html
+++ b/csm-app/src/app/component/version/version-list.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header> 
 <div class="live-category-container">
 
-  <h2 class="title-grid">Danh sách</h2>
+  <h2 class="title-grid">Danh sách phiên bản</h2>
   <div class="add-chargin">
     <!-- <button (click)="router.navigate(['live-category-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button> -->
-    <!-- <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button> -->
+    <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu cho mobile</button>
   </div>
   
   <ag-grid-angular
