--- a/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
+++ b/csm-app/src/app/component/live-wallpaper-list/live-wallpaper-list.component.html
@@ -2,7 +2,7 @@
 <div class="live-wallpaper-container">
   <app-loading [loader]="isLoading"></app-loading>
 
-  <h2 class="title-grid">Live Wallpaper</h2>
+  <h2 class="title-grid">Danh sách Live Wallpaper</h2>
   <div class="add-chargin">
     <button class="btn btn-secondary" (click)="back()" style="margin-bottom: 8px">Quay lại</button>
     <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu cho mobile</button>
