--- a/csm-app/src/app/component/user/user.component.html
+++ b/csm-app/src/app/component/user/user.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header> 
 <div class="live-category-container">
 
-  <h2 class="title-grid">Danh sách</h2>
+  <h2 class="title-grid">Danh sách người dùng</h2>
   <div class="add-chargin">
     <!-- <button (click)="router.navigate(['live-category-add'], { relativeTo: route })" class="btn btn-success" style="margin-bottom: 8px">Thêm</button> -->
     <!-- <button class="btn btn-success" style="margin: 0 0 8px 8px" (click)="export()">Xuất khẩu</button> -->
