--- a/csm-app/src/app/share/component/header/header.component.html
+++ b/csm-app/src/app/share/component/header/header.component.html
@@ -22,7 +22,7 @@
         <a class="nav-link waves-light" routerLinkActive="active" routerLink="/static-wallpaper" mdbWavesEffect>Static
           Wallpaper</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link waves-light" routerLinkActive="active" routerLink="/upload/upload-charging"
           mdbWavesEffect>Upload Charging</a>
       </li>
@@ -33,12 +33,12 @@
       <li class="nav-item">
         <a class="nav-link waves-light" routerLinkActive="active" routerLink="/upload/upload-static"
           mdbWavesEffect>Upload Static Wallpaper</a>
+      </li> -->
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/version" mdbWavesEffect>Version</a>
       </li>
       <li class="nav-item">
         <a class="nav-link waves-light" routerLinkActive="active" routerLink="/user" mdbWavesEffect>User</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light" routerLinkActive="active" routerLink="/version" mdbWavesEffect>Version</a>
       </li>
     </ul>
 
