--- a/csm-app/src/styles.css
+++ b/csm-app/src/styles.css
@@ -21,3 +21,6 @@
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.btn-mat-menu{
+  font-size: 18px;
+}
